--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,10 @@
 		/>
 		<link rel="apple-touch-icon" href="logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+			rel="stylesheet"
+		/>
 		<title>React App</title>
 	</head>
 	<body>
