--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
 		<link rel="apple-touch-icon" href="logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link
-			href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+			href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300"
 			rel="stylesheet"
 		/>
 		<title>React App</title>
