--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
 			href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300"
 			rel="stylesheet"
 		/>
-		<title>React App</title>
+		<title>E-Commerce Store</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
